fixing form and collapsing widget css

--- a/public/css/form.css
+++ b/public/css/form.css
@@ -239,7 +239,7 @@ form .has-error input {
     display: none;
 }
 
-.panel-collapse.collapse.show {
+.panel-collapse.collapse.show, .panel-collapse.collapse.in {
     display: block;
 }
 
